# fastvk

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: release.yml  tests.yml
docs/: index.md
docs/en/: index.md
docs/en/reference/: bot.md  callback_data.md  exceptions.md  fastvk.md  filters.md  fsm.md  index.md  keyboard.md  methods.md  router.md  types.md  uploader.md
docs/en/tutorial/: background-tasks.md  command-args.md  dashboard.md  exceptions.md  filters.md  first-steps.md  fsm.md  handlers.md  index.md  keyboard.md  lifespan.md  message.md  middleware.md  routers.md  sqlite-storage.md  webhook.md
docs/ru/: index.md
docs/ru/reference/: bot.md  callback_data.md  exceptions.md  fastvk.md  filters.md  fsm.md  index.md  keyboard.md  methods.md  router.md  (+2 more)
docs/stylesheets/: extra.css
examples/: README.md  upload_media.py
examples/advanced/: dashboard.py  exception_handler.py  lifespan.py  raw_api.py  showcase.py  sqlite_storage.py  webhook_bot.py
examples/basic/: command_handler.py  echo_bot.py  user_info.py
examples/callback_data/: usage.py
examples/collect/: bot_collect.py
examples/dashboard/: bot.py  settings.py
examples/events/: group_events.py
examples/filters/: builtin_filters.py  command_args.py  custom_filter.py  magic_filter.py
examples/fsm/: quiz_bot.py  simple_form.py
examples/keyboard/: fsm_with_keyboard.py  inline_keyboard.py  regular_keyboard.py  vkpay_button.py
examples/messages/: all_methods.py
examples/middleware/: logging_middleware.py  rate_limit.py
examples/routers/: base.py
fastvk/: __init__.py  __meta__.py  app.py  background.py  callback_data.py  exceptions.py  keyboard.py  logging.py  router.py  upload.py  webhook.py
fastvk/api/: __init__.py  client.py
fastvk/dashboard/: __init__.py  config.py  html.py  server.py
fastvk/enums/: __init__.py  chat_action.py  color.py  parse_mode.py
fastvk/filters/: __init__.py  base.py  builtin.py  magic.py
fastvk/fsm/: __init__.py  context.py  redis.py  sqlite.py  state.py  storage.py
fastvk/methods/: __init__.py  base.py  docs.py  groups.py  messages.py  photos.py  users.py  wall.py
fastvk/middleware/: __init__.py  base.py  throttling.py
fastvk/polling/: __init__.py  longpoll.py
fastvk/types/: __init__.py  callback.py  command.py  events.py  group.py  message.py  update.py  user.py
tests/: conftest.py  test_dashboard.py  test_enums.py  test_events.py  test_exceptions.py  test_filters.py  test_fsm.py  test_keyboard.py  test_router.py  test_sqlite_storage.py  test_throttling.py  test_types.py  test_webhook.py
(+16 files in other folders)
