[project]
name = "fastvk"
version = "0.0.2"
description = "Async VK bot framework with FastAPI-style decorators and aiogram-style FSM"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "White NEFOR", email = "n7for8572@gmail.com"},
]
maintainers = [
    {name = "White NEFOR", email = "n7for8572@gmail.com"},
]
keywords = [
    "vk",
    "vkontakte",
    "bot",
    "async",
    "fsm",
    "longpoll",
    "framework",
    "python",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "annotated-doc>=0.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/ndugram/fastvk"
Documentation = "https://github.com/ndugram/fastvk"
Repository = "https://github.com/ndugram/fastvk"
Issues = "https://github.com/ndugram/fastvk/issues"

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.0",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "aiohttp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "annotated_doc.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=fastvk",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["fastvk"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
